--- a/references.bib
+++ b/references.bib
@@ -21,7 +21,6 @@
   Pages                    = {529--537},
   Volume                   = {58},
 
-  __markedentry            = {[ilias:6]},
   Abstract                 = {The whole blood which is a mixture of cells, colloids and crystalloids can be separated into different blood components namely packed red blood cell (PRBC) concentrate, platelet concentrate, fresh frozen plasma and cryoprecipitate. Each blood component is used for a different indication; thus the component separation has maximized the utility of one whole blood unit. Different components need different storage conditions and temperature requirements for therapeutic efficacy. A variety of equipments to maintain suitable ambient conditions during storage and transportation are in vogue. The blood components being foreign to a patient may produce adverse effects that may range from mild allergic manifestations to fatal reactions. Such reactions are usually caused by plasma proteins, leucocytes, red cell antigens, plasma and other pathogens. To avoid and reduce such complications, blood products are modified as leukoreduced products, irradiated products, volume reduced products, saline washed products and pathogen inactivated products. The maintenance of blood inventory forms a major concern of blood banking particularly of rare blood groups routinely and common blood groups during disasters. PRBCs can be stored for years using cryopreservation techniques. New researches in red cell cultures and blood substitutes herald new era in blood banking.},
   Address                  = {India},
   Comment                  = {IJA-58-529[PII]
@@ -31,6 +30,18 @@
   Publisher                = {Medknow Publications \& Media Pvt Ltd},
   Timestamp                = {2015.10.04},
   Url                      = {http://www.ncbi.nlm.nih.gov/pmc/articles/PMC4260297/}
+}
+
+@Book{Booch2005,
+  Title                    = {Unified Modeling Language User Guide, The (2Nd Edition) (Addison-Wesley Object Technology Series)},
+  Author                   = {Booch, Grady and Rumbaugh, James and Jacobson, Ivar},
+  Publisher                = {Addison-Wesley Professional},
+  Year                     = {2005},
+
+  __markedentry            = {[revekka:6]},
+  ISBN                     = {0321267974},
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.06}
 }
 
 @Article{Borgman2012,
@@ -322,6 +333,15 @@
   Timestamp                = {2015.10.04}
 }
 
+@Book{Jacobson,
+  Title                    = {The Object Advantage: Business Process Reengineering with Object Technology},
+  Author                   = {I. Jacobson, M. Ericsson, A. Jacobson},
+  Year                     = {1994},
+
+  Owner                    = {revekka},
+  Timestamp                = {2015.10.07}
+}
+
 @Article{landsteinerABO,
   Title                    = {Zur Kenntnis der antifermentativen, lytischen und agglutinierenden Wirkungen des Blutserums und der Lymphe},
   Author                   = {Karl Landsteiner},
@@ -401,7 +421,6 @@
   Pages                    = {368--372},
   Volume                   = {38},
 
-  __markedentry            = {[ilias:]},
   ISSN                     = {1537-2995},
   Owner                    = {ilias},
   Publisher                = {Blackwell Science Ltd},
@@ -640,7 +659,7 @@ URN: urn:nbn:de:0114-fqs0501297},
   Timestamp                = {2015.10.04}
 }
 
-@Electronic{,
+@Electronic{ΚΕΕΛΠΝΟ2015,
   Title                    = {Ενημερωτικό Δελτίο},
   Author                   = {ΚΕ.ΕΛ.Π.ΝΟ.},
   Month                    = {September},
