--- a/system_analysis.tex
+++ b/system_analysis.tex
@@ -8,52 +8,83 @@
 	Οι μη λειτουργικές απαιτήσεις είναι οι απαιτήσεις που καθορίζουν τα κριτήρια που χρησιμοποιούνται για να κρίνουν την λειτουργία του συστήματος και κατ΄ επέκταση  αν είναι επιτυχημένο ή όχι, για αυτό και συχνά αποκαλούνται και ιδιότητες του. Επεξεργάζονται τα χαρακτηριστικά απόδοσης του, και μπορούν επίσης να περιγράψουν τις πτυχές του συστήματος που δεν σχετίζονται με την εκτέλεση του, αλλά με την εξέλιξη του στο πέρασμα του χρόνου. Οι βασικές συνήθεις κατηγορίες των μη λειτουργικών απαιτήσεων σχετίζονται με την ασφάλεια( ασφαλή πρόσβαση σε δεδομένα αλλά και σε hardware), την απόδοση ( ορίζουν χαρακτηριστικά που έχουν να κάνουν με την ταχύτητα και την ανταπόκριση του συστήματος) και την επεκτασιμότητα (σχετίζονται με το μέγεθος του συστήματος). Γενικότερα, οι μη λειτουργικές απαιτήσεις καθορίζουν το πώς πρέπει να είναι ένα σύστημα, σε αντίθεση με τις λειτουργικές απαιτήσεις που καθορίζουν τι πρέπει να κάνει ένα σύστημα. Οι λειτουργικές απαιτήσεις ανήκουν στο κομμάτι σχεδιασμού και ανάλυσης του συστήματος ενώ οι μη λειτουργικές απαιτήσεις ανήκουν στο κομμάτι της αρχιτεκτονικής του συστήματος.
 	
 	\subsection{Λειτουργίες εφαρμογής (web, mobile)}
-	Οι χρήστες του συστήματος χωρίζονται σε τρεις μεγάλες ομάδες χρηστών.
-		\begin{enumerate}
-			\item Εθελοντές αιμοδότες
-			\item Εγκεκριμένοι χρήστες/διαχειριστές των συστημάτων αιμοδοσίας
-			\item Υπέρ-Διαχειριστές του συστήματος
-		\end{enumerate}
-		
-		Οι εθελοντές αιμοδότες αποτελούν την βασική κατηγορία χρηστών καθώς πραγματοποιούν συνεχή και εκτεταμένη χρήση των υπηρεσιών του συστήματος, τόσο στο επίπεδο της εφαρμογής έξυπνου κινητού όσο και μέσω του web portal. Οι εγκεκριμένοι χρήστες/διαχειριστές των συστημάτων αιμοδοσίας χρησιμοποιούν αποκλειστικά το web portal το οποίο βρίσκεται στο υπολογιστικό νέφος για ολοκληρωμένη διαχείριση ενός πλήρη κύκλου αιμοδοσίας Οι λειτουργίες που μπορεί να επιτελέσει κάθε ομάδα χρηστών καθώς και οι λειτουργικές απαιτήσεις του συστήματος αναλύονται με λεπτομέρειες στην συνέχεια.
-		\subsubsection{Mobile} \label{sssec:functional_requirements_mobile}
-			Περιληπτικά (θα αναλυθούν με λεπτομέρειες στην συνέχεια) οι λειτουργικές απαιτήσεις της εφαρμογής έξυπνου κινητού έχουν ως εξής:
-			\begin{itemize}
-				\item Δυνατότητα εγγραφής στο σύστημα ως εθελοντής αιμοδότης με χρήση του αριθμού μητρώου κοινωνικής ασφάλισης (Α.Μ.Κ.Α.).
-				\item Δυνατότητα σύνδεσης στο σύστημα αν έχει πραγματοποιήσει ήδη έγγραφή στο παρελθόν.
-				\item Δυνατότητα προβολής γεγονότων αιμοδοσίας.
-				\item Δυνατότητα λήψης ειδοποιήσεων (push notifications) όταν δημιουργείται κάποιο νέο γεγονός αιμοδοσίας για το οποίο ο εθελοντής αιμοδότης πληρεί τα απαραίτητα κριτήρια.
-				\item Δυνατότητα αποδοχής, απόρριψης ή αναβολής της ειδοποίησης για το γεγονός αιμοδοσίας.
-				\item Δυνατότητα διαχείρισης ραντεβού για αιμοδοσία (δημιουργία νέου ραντεβού, μετάθεση , προβολή, ακύρωση).
-				\item Δυνατότητα προσθήκης και συγχρονισμού των ραντεβού αιμοδοσίας στο ημερολογίου του χρήστη.
-				\item Δυνατότητα ενημέρωσης σχετικά με το υπολειπόμενο διάστημα που πρέπει να παρέλθει ώστε ο εθελοντής να είναι σε θέση να συμμετέχει σε μία νέα αιμοδοσία.
-				\item Δυνατότητα να κερδίσει πόντους και εμβλήματα βάση των αιμοδοσιών του (gamification system) και να τα μοιραστεί στα μέσα κοινωνικής δικτύωσης.
-				\item Δυνατότητα να μοιραστεί και να δημοσιεύσει στοιχεία στα μέσα κοινωνικής δικτύωσης σε κάθε στάδιο της αιμοδοσίας.
-				\item Δυνατότητα δημιουργίας έκκλησης για αίμα σε περίπτωση ανάγκης ατόμων του στενού κύκλου χρήστη και δημοσίευσης του στα μέσα κοινωνικής δικτύωσης.
-				\item Δυνατότητα διαχείρισης προφίλ χρήστη.
-			\end{itemize}
-			\subsubsection{Web Portal} \label{sssec:functional_requirements_web}
-				Το web portal που βρίσκεται στο υπολογιστικό νέφος χρησιμοποιείται απο όλες τις ομάδες χρηστών. Όσον αφορά στους εθελοντές αιμοδότες ισχύουν οι ίδιες λειτουργικές απαιτήσεις όπως στην εφαρμογή του έξυπνου κινητού οι οποίες και αναλύθηκαν παραπάνω στο \ref{sssec:functional_requirements_mobile}. Όσον αφορά στους χρήστες/διαχειριστές των κέντρων αιμοδοσίας έχουμε τις παρακάτω λειτουργικές απαιτήσεις:
-				\begin{itemize}
-					\item Δημιουργία νέων γεγονότων αιμοδοσίας.
-					\item Αποστολή ειδοποιήσεων στους εθελοντές αιμοδότες βάση των γεγονότων αιμοδοσίας, των αναγκών και των κριτηρίων αποδοχής.
-					\item Προβολή στατιστικών ανά έτος σχετικά με τις ειδοποιήσεις που στάλθηκαν από το συγκεκριμένο κέντρο αιμοδοσίας και την ανταπόκριση των χρηστών (αποδοχή, απόρριψη, άνοιγμα ειδοποίησης, ολοκλήρωση αιμοδοσίας).
-					\item Διαχείριση των ραντεβού για αιμοληψία.
-					\item Διαχείριση του προφίλ του κέντρου αιμοδοσίας.
-				%	\item Εισαγωγή δεδομένων από το τοπικό τους σύστημα στο κεντρικό σύστημα μας που βρίσκεται στο υπολογιστικό νέφος
-					\item Δυνατότητα εγγραφής στο σύστημα νέου εθελοντή αιμοδότη.
-					\item Δυνατότητα καταχώρησης της ολοκλήρωσης της αιμοδοσίας.
-					\item Δυνατότητα ελέγχου τήρησης προϋποθέσεων καταλληλότητας εθελοντή αιμοδότη.
-				\end{itemize}
-				Όσον αφορά στους υπέρ-διαχειριστές του συστήματος έχουμε τις παρακάτω λειτουργικές απαιτήσεις:
-				\begin{itemize}
-					\item Δυνατότητα διαχείρισης λογαριασμών χρηστών.σσ
-					\item Προβολή στατιστικών για τους χρήστες του συστήματος
-				\end{itemize}
-				
 	\subsection{Social Networking Integration}
-	\subsection{Gamification}
 
-\section{Σενάρια χρήσης - UML diagrams}
+\section{UML diagrams - Σενάρια χρήσης  }
+
+	Η διαδικασία της μοντελοποίησης, δηλαδή ο αναλυτικός σχεδιασμός ενός συστήματος, πριν από την υλοποίηση του είναι ένα πολύ βασικό στάδιο κατά την ανάπτυξη εφαρμογών. Ένα σύστημα μοντελοποιείται επιτυχώς όταν οι λειτουργικότητες του συστήματος έχουν περιγραφεί πλήρως και ορθώς, έχουν καλυφθεί οι ανάγκες των τελικών χρηστών και υποστηρίζεται η επεκτασιμότητα του συστήματος. 
+	Η ενοποιημένη Γλώσσα Μοντελοποίησης (UML) είναι μια τυπική γλώσσα για την σύνταξη λεπτομερών σχεδίων λογισμικού. Η UML μπορεί να χρησιμοποιηθεί για να απεικονίσει, να προσδιορίζει,να κατασκευάσει και να τεκμηριώσει τα προϊόντα του συστήματος εντάσεως λογισμικού.\cite{Booch2005}. Δεν αποτελεί απλώς έναν κατάλογο από διαγράμματα, αλλά είναι μια γλώσσα αναπαράστασης γνώσης. Αυτό συνεπάγεται ότι κάθε στοιχείο διαγράμματος, π.χ. κουτί, βέλος, κύκλος, ορθογώνιο κ.λπ., υποστηρίζεται από συγκεκριμένους κανόνες σύνταξης και σημασιολογία.
+	 Επιλέξαμε να μοντελοποιήσουμε το σύστημα μας με χρήση της γλώσσας UML για τους εξής λόγους:
+	 \begin{itemize}
+	 \item Είναι ένα βιομηχανικό πρότυπο από τον διεθνή, ανοιχτό και μη κερδοσκοπικό οργανισμό εταιριών Object Management Group (OMG).
+	 \item Η UML είναι χτισμένη πάνω σε θεμελιώσεις αντικειμενοστραφείς έννοιες, όπως η κλάση, με αποτέλεσμα να υποστηρίζει καλύτερα την ανάπτυξη και τον σχεδιασμό του αντικειμενοστραφούς λογισμικού.
+	 \item Δίνει έμφαση στην ανάλυση των σεναρίων χρήσης, το οποίο είναι ένα πολύτιμο εργαλείο για την παρακολούθηση των σταδίων μιας διαδικασίας από την οπτική γωνία του χρήστη.
+	 \item Δίνει στον σχεδιαστή την δυνατότητα να παρουσιάσει όσο λεπτομερώς επιθυμεί αυτός τις περιγραφές του συστήματος.
+	 \item Τμηματοποιεί τον σχεδιασμό του συστήματος με αποτέλεσμα να αυξάνεται η επεκτασιμότητα του.
+\end{itemize}	 
+
+	Η UML 2.0 ορίζει δεκατρείς τύπους διαγραμμάτων, τα οποία μπορούν να χωριστούν σε δύο βασικές κατηγορίες:
+	\begin{itemize}
+		\item Τα διαγράμματα στατικής δομής, τα οποία δείχνουν τα πράγματα τα οποία απαρτίζουν το σύστημα που μοντελοποιείται και δεν αλλάζουν στο πέρασμα του χρόνου, για παράδειγμα τις κλάσεις, τα αντικείμενα κλπ. Στα διαγράμματα δομής ανήκουν : τα διαγράμματα κλάσεων, τα διαγράμματα αντικειμένων, τα ψηφιδικά διαγράμματα, τα διαγράμματα σύνθετης δομής, τα διαγράμματα πακέτου και τα διαγράμματα διάταξης.
+		\item Τα διαγράμματα συμπεριφοράς, τα οποία δίνουν έμφαση στο τι πρέπει να γίνει στο σύστημα που μοντελοποιούμε, όπως τις αλληλεπιδράσεις με τους χρήστες, τις διάφορες καταστάσεις του συστήματος κλπ. Διαγράμματα συμπεριφοράς αποτελούν τα ακόλουθα: τα διαγράμματα χρήσης, τα διαγράμματα δραστηριότης, τα διαγράμματα καταστάσεων μηχανής, τα ακολουθιακά διαγράμματα, τα συνεργατικά διαγράμματα και τα διαγράμματα χρονισμού.
+	\end{itemize}
+Κάθε ένα από τα παραπάνω διαγράμματα βλέπει το σύστημα από μια διαφορετική οπτική γωνία, π.χ. τα διαγράμματα χρήσης δείχνουν πώς οι χρήστες αλληλεπιδρούν με το σύστημα, τα διαγράμματα κλάσης δείχνουν τις κλάσεις του συστήματος και τις σχέσεις μεταξύ τους κλπ.
+
+	Στο πλαίσιο της διπλωματικής μας, θα χρησιμοποιήσουμε διαγράμματα χρήσης (use cases diagrams). Τα διαγράμματα χρήσης είναι τα διαγράμματα υψηλότερου επιπέδου της UML και αποτυπώνουν την συμπεριφορά του συστήματος από την σκοπιά ενός εξωτερικού χρήστη. Περιγράφονται όλες οι λειτουργίες του συστήματος σε έναν γραφικό πίνακα περιεχομένων (τι πρέπει να κάνει το σύστημα και όχι το πως θα το κάνει).  Τα διαγράμματα χρήσης έχουν τέσσερα βασικά συστατικά:
+	
+	\begin{itemize}
+		\item Τους δράστες, που είναι χρήστες, ένας οργανισμός, εξωτερικά συστήματα κλπ..Κάθε δράστης συνδέεται με αρκετά σενάρια χρήσης καθένα από τα οποία περιγράφει τι θέλει να κάνει ο δράστης με το σύστημα.
+		\item Τα σενάρια χρήσης ( τα οποία αναπαρίστανται με οβάλ σχήματα και το όνομα των σεναρίων ),  τα οποία περιγράφουν μία σειρά από πράξεις που πρέπει να εκτελεστούν για να επιτευχθεί ή να εγκαταλειφθεί ο στόχος του δράστη.
+		\item Τις γραμμές που αντιπροσωπεύουν διάφορους τύπους σχέσεων (πχ isa, περιλαμβάνει, επεκτείνει κλπ) μεταξύ ενός δράστη και ενός σεναρίου χρήσης, μεταξύ δύο σεναρίων χρήσης και μεταξύ δύο δραστών. 
+		\item Τα όρια του συστήματος που αντιπροσωπεύεται από ένα τετράγωνο που περιλαμβάνει όλα τα σενάρια χρήσης που υποδεικνύουν τις λειτουργικότητες του συστήματος. 
+
+	\end{itemize}
+	
+
+Η πρακτική της ανάλυσης με σενάρια χρήσης τυποποιήθηκε για πρώτη φορά από τον Jacobson το 1994, ο οποίος περιέγραψε το σενάριο χρήσης σαν "μία σειρά από συναλλαγές που σχετίζονται ως προς την συμπεριφορά και εκτελούνται από έναν δράστη που βρίσκεται σε επικοινωνία με το σύστημα με σκοπό την παροχή κάποιας μετρήσιμης αξίας στον δράστη" \cite{Jacobson} . Ένα σενάριο χρήσης είναι μία συλλογή από πιθανά σενάρια μεταξύ του συστήματος και των εξωτερικών του δραστών. Κάθε σενάριο χρήσης χαρακτηρίζεται από τον στόχο που έχει ο κύριος δράστης του. Ο στόχος αυτός μπορεί να επιτευχθεί ή όχι. Τα σενάρια χρήσης αποτελούν ένα πολύ διαδεδομένο και πολύτιμο εργαλείο για την πλήρη αποτύπωση των λειτουργικών απαιτήσεων του συστήματος. Οι λειτουργικές απαιτήσεις μπορούν να εκφραστούν είτε με μορφή κειμένου, είτε με μορφή πίνακα. Επιλέξαμε να χρησιμοποιήσουμε την μορφή πίνακα, καθώς έχει πιο αυστηρή δομή με αποτέλεσμα να μειώνονται οι ασυνέπειες και οι περιττές πληροφορίες. \cite{Cockburn2000} και πιο συγκεκριμένα την μονή στήλη πρότυπο \cite{Cockburn2000} :
+ 
+ Ο τίτλος του σεναρίου χρήσης, που συνήθως είναι ένα μία πρόταση που περιγράφει τον στόχο του κύρίως δράστη.
+ Το πλαίσιο του στόχου
+ Μία μεγαλύτερη δήλωση η οποία περιγράφει τον στόχο του σεναρίου χρήσης με περισσότερες λεπτομέρειες.
+ Λεπτομέρειες
+ Κύριοι δράστες: Είναι οι δράστες που έχουν ως στόχο αυτόν που περιγράφεται από το σενάριο χρήσης.
+ Προϋποθέσεις: αυτά που ισχύουν πριν ξεκινησει να εκτελείται το σενάριο χρήσης. Εφόσον είναι γνωστό ότι μια συνθήκη είναι αληθής, δεν θα ελεγχθεί ξανά κατά την διάρκεια εκτέλεσης του σεναρίου χρήσης. 
+ Επίπεδα: τα επίπεδο των στόχων είναι ένα από τα παρακάτω 
+ \begin{itemize}
+\item  Περίληψης:  Ένα περιληπτικού στόχου σενάριο χρήσης παρέχει έναν πίνακα περιεχομένων για τα πιο χαμηλού επιπέδου σενάρια χρήσης.
+\item Χρήστη: Ένα επιπέδου χρήστη στόχου σενάριο χρήσης παρέχει τον στόχο τον οποίο έχει ο κύριος δράστης όταν χρησιμοποιεί το σύστημα. Το σύνολο των συγκεκριμένων σεναρίων χρήσης παρουσιάζουν το μεγαλύτερο μέρος της λειτουργικότητας του συστήματος. 
+\item  Υπολειτουργία: A subfunction level goal σενάριο χρήσης πραγματοποιεί τα user level goals που αναφέρθηκαν από πάνω. Συνήθως είναι απαραίτητα καθώς πολλά άλλα user goals σενάρια χρήσης τα χρησιμοποιούν.
+ \end{itemize}
+ 
+ Εύρος: κάθε σενάριο χρήσης χαρακτηρίζεται από ένα από τα ακόλουθα:
+ \begin{itemize}
+ \item  Συστήματος: μόνο το πρώτο σενάριο χρήσης που ενώνει όλα τα υπόλοιπα σενάρια χρήσης έχει αυτό το εύρος. Περιλαμβάνει όλες τις λειτουργικότητες του συστήματος.
+ \item Του αντίστοιχου κατάλληλου υποσυστήματος: αυτό ουσιαστικά σημαίνει ότι το κυρίως υποσύστημα είναι ανοιχτό και το σενάριο χρήσης περιγράφει πως λειτουργεί ένα μέρος του πχ. το υποσύστημα διαχείρισης του συστήματος.
+ \end{itemize}
+ 
+ Ενέργεια ενεργοποίησης: Καθορίζει ποιο γεγονός εκκινά το σενάριο χρήσης. Η ενέργεια εκκίνησης αποτελεί το πρώτο βήμα του σεναρίου χρήσης. 
+ 
+ Ροή γεγονότων
+ 
+ Το σενάριο επιτυχίας: Το σενάριο αυτό περιγράφει την περίπτωση όπου όλα κυλάνε ομαλά. Είναι μία ακολουθία από αριθμημένα βήματα (ένα πλήρες σενάριο χρήσης έχει περισσότερα από 3 και λιγότερα από 9 βήματα) όπου το καθένα από αυτά είναι μία απλή δήλωση και δείχνει ξεκάθαρα ποιος ελέγχει την δράση.  Χρησιμοποιούνται μόνο ενέργειες που προωθούν την ολοκλήρωση της διαδικασίας. Επίσης όταν ένα σενάριο χρήσης αναφέρεται σε ένα άλλο τότε το δεύτερο γράφεται με μπλε χρώμα και είναι υπογραμμισμένο.
+ 
+ Επεκτάσεις: Οι επεκτάσεις περιγράφουν τι μπορεί να συμβεί και με διαφορετικό τρόπο κατά την διάρκεια εκτέλεσης του επιτυχημένου σεναρίου. Μπορούν να οδηγήσουν σε επιτυχία ή σε αποτυχίες. Κάθε επέκταση αποτελείται από δύο διαφορετικά μέρη:
+ \begin{itemize}
+ \item Τις προϋποθέσεις κάτω από τις οποίες το σύστημα υιοθετεί μία διαφορετική συμπεριφορά. Μετά από αυτές τοποθετείται μία άνω και κάτω τελεία (:).
+ \item Ο χειρισμός της επέκτασης που είναι μία ακολουθία από βήματα που απαιτούνται λόγω των προϋποθέσεων που υπάρχουν.
+ \end{itemize}
+ 
+ Παραλλαγές: Οι παραλλαγές κάποιου βήματος από το επιτυχημένο σενάριο υπάρχουν επειδή ενώ αυτό που συμβαίνει σε κάποιο βήμα είναι πάντα το ίδιο υπάρχουν πολλοί τρόποι να το κάνουμε.
+ 
+ 
+
+
+
+
+
+
+
+
+	
 \section{Ανάλυση απαιτήσεων (web, mobile)}
 \section{Σχεδιασμός και αρχιτεκτονική της εφαρμογής (web, mobile)}
