Gamification Introduction and Figures 1st Draft

--- a/references.bib
+++ b/references.bib
@@ -82,6 +82,16 @@
   Timestamp                = {2015.10.04}
 }
 
+@InProceedings{Gamification_on_Participation,
+  Title                    = {Effects of Gamification on Participation and Data Quality in a Real-World Market Research Domain},
+  Author                   = {Jared Cechanowicz and Carl Gutwin and Briana Brownell and Larry Goodfellow},
+  Booktitle                = {Gamification 2013},
+  Year                     = {2013},
+
+  Address                  = {Stratford Ontario},
+  Pages                    = {58-65}
+}
+
 @InProceedings{1019587,
   Title                    = {An HL7/CDA framework for the design and deployment of telemedicine services},
   Author                   = {Chronaki, C.E. and Lelis, P. and Demou, C. and Tsiknakis, M. and Orphanoudakis, S.C.},
@@ -167,6 +177,26 @@
 
   Owner                    = {ilias},
   Timestamp                = {2015.10.04}
+}
+
+@InProceedings{Deterding:2011:GDE:2181037.2181040,
+  Title                    = {From Game Design Elements to Gamefulness: Defining "Gamification"},
+  Author                   = {Deterding, Sebastian and Dixon, Dan and Khaled, Rilla and Nacke, Lennart},
+  Booktitle                = {Proceedings of the 15th International Academic MindTrek Conference: Envisioning Future Media Environments},
+  Year                     = {2011},
+
+  Address                  = {New York, NY, USA},
+  Pages                    = {9--15},
+  Publisher                = {ACM},
+  Series                   = {MindTrek '11},
+
+  Acmid                    = {2181040},
+  Doi                      = {10.1145/2181037.2181040},
+  ISBN                     = {978-1-4503-0816-8},
+  Keywords                 = {alternate reality games, game-based technologies, gameful design, gamefulness, games, gamification, pervasive games, play, playful design, playfulness, serious games},
+  Location                 = {Tampere, Finland},
+  Numpages                 = {7},
+  Url                      = {http://doi.acm.org/10.1145/2181037.2181040}
 }
 
 @Article{VOX:VOX5295,
@@ -274,6 +304,17 @@
   Timestamp                = {2015.09.14}
 }
 
+@Electronic{gartnerGamification,
+  Title                    = {Gartner Says By 2015, More Than 50 Percent of Organizations That Manage Innovation Processes Will Gamify Those Processes},
+  Author                   = {Gartner},
+  Organization             = {Gartner},
+  Url                      = {http://www.gartner.com/newsroom/id/1629214},
+  Year                     = {2011},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.06}
+}
+
 @Book{textbookOfMedicine,
   Title                    = {Textbook of Medicine},
   Author                   = {Lee Goldman},
@@ -321,6 +362,18 @@
   Bdsk-url-1               = {https://www.grnet.gr/en/node/400},
   Owner                    = {ilias},
   Timestamp                = {2015.09.27}
+}
+
+@InProceedings{6758978,
+  Title                    = {Does Gamification Work? -- A Literature Review of Empirical Studies on Gamification},
+  Author                   = {Hamari, J. and Koivisto, J. and Sarsa, H.},
+  Booktitle                = {System Sciences (HICSS), 2014 47th Hawaii International Conference on},
+  Year                     = {2014},
+  Month                    = {Jan},
+  Pages                    = {3025-3034},
+
+  Doi                      = {10.1109/HICSS.2014.377},
+  Keywords                 = {behavioural sciences;game theory;dependent variables;empirical studies;gamification work;gamified systems;independent variables;literature review;psychological-behavioral outcomes;Context;Databases;Educational institutions;Games;Libraries;Psychology;HCI;gamification;motivation;motivational affordance;persuasive technology}
 }
 
 @Electronic{hematologyBasics,
@@ -519,6 +572,37 @@
 
   Owner                    = {ilias},
   Timestamp                = {2015.10.03}
+}
+
+@Book{prenskyGamification,
+  Title                    = {Digital Game-Based Learning},
+  Author                   = {Marc Prensky},
+  Editor                   = {Marc Prensky},
+  Publisher                = {Paragon House},
+  Year                     = {2007},
+
+  Owner                    = {ilias},
+  Timestamp                = {2015.10.07}
+}
+
+@InProceedings{Rojas:2013:MPG:2583008.2583033,
+  Title                    = {The Missing Piece in the Gamification Puzzle},
+  Author                   = {Rojas, David and Kapralos, Bill and Dubrowski, Adam},
+  Booktitle                = {Proceedings of the First International Conference on Gameful Design, Research, and Applications},
+  Year                     = {2013},
+
+  Address                  = {New York, NY, USA},
+  Pages                    = {135--138},
+  Publisher                = {ACM},
+  Series                   = {Gamification '13},
+
+  Acmid                    = {2583033},
+  Doi                      = {10.1145/2583008.2583033},
+  ISBN                     = {978-1-4503-2815-9},
+  Keywords                 = {design, gamification, guidelines, implementation, medical research council framework, outcomes},
+  Location                 = {Toronto, Ontario, Canada},
+  Numpages                 = {4},
+  Url                      = {http://doi.acm.org/10.1145/2583008.2583033}
 }
 
 @Article{Stainsby01092000,
