--- a/system_analysis.tex
+++ b/system_analysis.tex
@@ -1,3 +1,5 @@
+\graphicspath{ {Figures/system_analysis/} }
+
 \chapter{Ανάλυση και σχεδιασμός του συστήματος LifeDonor}\label{ch:Analysis of LifeDonor}
 \section{Λειτουργικές απαιτήσεις}
 
@@ -9,7 +11,30 @@
 	
 	\subsection{Λειτουργίες εφαρμογής (web, mobile)}
 	\subsection{Social Networking Integration}
-
+	\subsection{Gamification}
+		Το gamification (παιχνιδοποιήση) ορίζεται ως "η ενσωμάτωση διάφορων πρακτικών και διαδικασιών παιχνιδιού σε καταστάσεις που δεν σχετίζονται με το παιχνίδι με στόχο τη λύση προβλημάτων μέσω της αύξησης της διαδραστικότητας και της συμμετοχής των χρηστών"\cite{Deterding:2011:GDE:2181037.2181040}\cite{Rojas:2013:MPG:2583008.2583033}. Ως εκ τούτου, η το gamification έχει βρει χρήση σε ένα ευρύ φάσμα εφαρμογών από τον χώρο του marketing και της εκπαίδευσης μέχρι και τον χώρο της υγείας \cite{6758978}. Το Gartner έχει εκτιμήσει ότι μέχρι το τέλος του 2015 περισσότερο από το 50\% των επιχειρήσεων θα αξιοποιεί το gamification \cite{gartnerGamification}. Στον ακαδημαϊκό χώρο συναντάμε όλο και περισσότερη έρευνα και δημοσιεύσεις με στόχο να μελετηθεί με μετρήσιμα, αντικειμενικά κριτήρια κατά πόσο είναι αποτελεσματική η χρήση των τεχνικών gamifaction. Ένα παιχνίδι αποτελείται από έξι δομικά στοιχεία, όπως παρουσιάζονται στο σχήμα \ref{fig:gamification_components}.
+		
+	\begin{figure}[h]
+	    \centering
+	    \includegraphics[width=0.7\textwidth]{gamification_components.jpg}
+	    \caption{Δομικά στοιχεία παιχνιδιών}
+	    \label{fig:gamification_components}
+	\end{figure}
+	
+	Ένας από τους βασικούς στόχους ενός συστήματος gamification αποτελεί η αύξηση της ενασχόλησης του χρήστη. Τα στάδια με τα οποία ευελπιστεί να το πετύχει έχουν ως εξής:
+	\begin{enumerate}
+		\item Κίνητρα: Στην αρχή της διαδικασίας θα πρέπει να δοθεί στον χρήστη κάποιο κίνητρο το οποίο διαφέρει ανάλογα με τον τύπο χρήστη καθώς και τους στόχους του συστήματος. Παράδειγμα ενός τέτοιου κινήτρου αποτελεί η κοινωνική αναγνώριση \cite{Gamification_on_Participation}.
+		\item Ενέργειες: είναι το δεύτερο στάδιο στο οποίο ο χρήστης οδηγείται μέσω των κινήτρων του πρώτου σταδίου. Σε αυτό το στάδιο ο χρήστης πραγματοποιεί την επιθυμητή από το σύστημα ενέργεια. Για παράδειγμα σε μια εφαρμογή εκμάθησης ξένων γλωσσών μια ενέργεια μπορεί να είναι η επανάληψη του λεξιλογίου.
+		\item Επιβραβεύσεις: Ύστερα από την επιτυχή ολοκλήρωσης της ενέργειας ή των ενεργειών στο δεύτερο βήμα ο χρήστης λαμβάνει κάποια μορφή επιβράβευσης. Παραδείγματα επιβραβεύσεων που βρίσκουν ευρεία χρήση στο gamification αποτελούν τα εικονικά νομίσματα και τα εικονικά αγαθά.
+		\item Κατορθώματα: Στο τελευταίο αυτό στάδιο ο χρήστης φτάνει σε κάποιο κατόρθωμα το οποίο ενισχύει τα κίνητρα του και ο κύκλος επαναλαμβάνεται \cite{GamificationDesign}.
+	\end{enumerate}
+	Η διαδικασία όπως την περιγράψαμε εμφανίζεται στο σχήμα \ref{fig:engagement_loop}.
+	\begin{figure}[h]
+	    \centering
+	    \includegraphics[width=0.7\textwidth]{engagement_loop.jpg}
+	    \caption{Κύκλος ενασχόλησης}
+	    \label{fig:engagement_loop}
+	\end{figure}
 \section{UML diagrams - Σενάρια χρήσης  }
 
 	Η διαδικασία της μοντελοποίησης, δηλαδή ο αναλυτικός σχεδιασμός ενός συστήματος, πριν από την υλοποίηση του είναι ένα πολύ βασικό στάδιο κατά την ανάπτυξη εφαρμογών. Ένα σύστημα μοντελοποιείται επιτυχώς όταν οι λειτουργικότητες του συστήματος έχουν περιγραφεί πλήρως και ορθώς, έχουν καλυφθεί οι ανάγκες των τελικών χρηστών και υποστηρίζεται η επεκτασιμότητα του συστήματος. 
@@ -80,11 +105,5 @@
 
 
 
-
-
-
-
-
-	
 \section{Ανάλυση απαιτήσεων (web, mobile)}
 \section{Σχεδιασμός και αρχιτεκτονική της εφαρμογής (web, mobile)}
