Functional requirements 2nd Draft

--- a/system_analysis.tex
+++ b/system_analysis.tex
@@ -10,6 +10,49 @@
 	Οι μη λειτουργικές απαιτήσεις είναι οι απαιτήσεις που καθορίζουν τα κριτήρια που χρησιμοποιούνται για να κρίνουν την λειτουργία του συστήματος και κατ΄ επέκταση  αν είναι επιτυχημένο ή όχι, για αυτό και συχνά αποκαλούνται και ιδιότητες του. Επεξεργάζονται τα χαρακτηριστικά απόδοσης του, και μπορούν επίσης να περιγράψουν τις πτυχές του συστήματος που δεν σχετίζονται με την εκτέλεση του, αλλά με την εξέλιξη του στο πέρασμα του χρόνου. Οι βασικές συνήθεις κατηγορίες των μη λειτουργικών απαιτήσεων σχετίζονται με την ασφάλεια( ασφαλή πρόσβαση σε δεδομένα αλλά και σε hardware), την απόδοση ( ορίζουν χαρακτηριστικά που έχουν να κάνουν με την ταχύτητα και την ανταπόκριση του συστήματος) και την επεκτασιμότητα (σχετίζονται με το μέγεθος του συστήματος). Γενικότερα, οι μη λειτουργικές απαιτήσεις καθορίζουν το πώς πρέπει να είναι ένα σύστημα, σε αντίθεση με τις λειτουργικές απαιτήσεις που καθορίζουν τι πρέπει να κάνει ένα σύστημα. Οι λειτουργικές απαιτήσεις ανήκουν στο κομμάτι σχεδιασμού και ανάλυσης του συστήματος ενώ οι μη λειτουργικές απαιτήσεις ανήκουν στο κομμάτι της αρχιτεκτονικής του συστήματος.
 	
 	\subsection{Λειτουργίες εφαρμογής (web, mobile)}
+Οι χρήστες του συστήματος χωρίζονται σε τρεις μεγάλες ομάδες χρηστών.
+		\begin{enumerate}
+			\item Εθελοντές αιμοδότες
+			\item Εγκεκριμένοι χρήστες/διαχειριστές των συστημάτων αιμοδοσίας
+			\item Υπέρ-Διαχειριστές του συστήματος
+		\end{enumerate}
+		
+		Οι εθελοντές αιμοδότες αποτελούν την βασική κατηγορία χρηστών καθώς πραγματοποιούν συνεχή και εκτεταμένη χρήση των υπηρεσιών του συστήματος, τόσο στο επίπεδο της εφαρμογής έξυπνου κινητού όσο και μέσω του web portal. Οι εγκεκριμένοι χρήστες/διαχειριστές των συστημάτων αιμοδοσίας χρησιμοποιούν αποκλειστικά το web portal το οποίο βρίσκεται στο υπολογιστικό νέφος για ολοκληρωμένη διαχείριση ενός πλήρη κύκλου αιμοδοσίας Οι λειτουργίες που μπορεί να επιτελέσει κάθε ομάδα χρηστών καθώς και οι λειτουργικές απαιτήσεις του συστήματος αναλύονται με λεπτομέρειες στην συνέχεια.
+		\subsubsection{Mobile} \label{sssec:functional_requirements_mobile}
+			Περιληπτικά (θα αναλυθούν με λεπτομέρειες στην συνέχεια) οι λειτουργικές απαιτήσεις της εφαρμογής έξυπνου κινητού έχουν ως εξής:
+			\begin{itemize}
+				\item Δυνατότητα εγγραφής στο σύστημα ως εθελοντής αιμοδότης με χρήση του αριθμού μητρώου κοινωνικής ασφάλισης (Α.Μ.Κ.Α.).
+				\item Δυνατότητα σύνδεσης στο σύστημα αν έχει πραγματοποιήσει ήδη έγγραφή στο παρελθόν.
+				\item Δυνατότητα προβολής γεγονότων αιμοδοσίας.
+				\item Δυνατότητα λήψης ειδοποιήσεων (push notifications) όταν δημιουργείται κάποιο νέο γεγονός αιμοδοσίας για το οποίο ο εθελοντής αιμοδότης πληρεί τα απαραίτητα κριτήρια.
+				\item Δυνατότητα αποδοχής, απόρριψης ή αναβολής της ειδοποίησης για το γεγονός αιμοδοσίας.
+				\item Δυνατότητα διαχείρισης ραντεβού για αιμοδοσία (δημιουργία νέου ραντεβού, μετάθεση , προβολή, ακύρωση).
+				\item Δυνατότητα προσθήκης και συγχρονισμού των ραντεβού αιμοδοσίας στο ημερολογίου του χρήστη.
+				\item Δυνατότητα ενημέρωσης σχετικά με το υπολειπόμενο διάστημα που πρέπει να παρέλθει ώστε ο εθελοντής να είναι σε θέση να συμμετέχει σε μία νέα αιμοδοσία.
+				\item Δυνατότητα να κερδίσει πόντους και εμβλήματα βάση των αιμοδοσιών του (gamification system) και να τα μοιραστεί στα μέσα κοινωνικής δικτύωσης.
+				\item Δυνατότητα να μοιραστεί και να δημοσιεύσει στοιχεία στα μέσα κοινωνικής δικτύωσης σε κάθε στάδιο της αιμοδοσίας.
+				\item Δυνατότητα δημιουργίας έκκλησης για αίμα σε περίπτωση ανάγκης ατόμων του στενού κύκλου χρήστη και δημοσίευσης του στα μέσα κοινωνικής δικτύωσης.
+				\item Δυνατότητα διαχείρισης προφίλ χρήστη.
+			\end{itemize}
+			\subsubsection{Web Portal} \label{sssec:functional_requirements_web}
+				Το web portal που βρίσκεται στο υπολογιστικό νέφος χρησιμοποιείται απο όλες τις ομάδες χρηστών. Όσον αφορά στους εθελοντές αιμοδότες ισχύουν οι ίδιες λειτουργικές απαιτήσεις όπως στην εφαρμογή του έξυπνου κινητού οι οποίες και αναλύθηκαν παραπάνω στο \ref{sssec:functional_requirements_mobile}. Όσον αφορά στους χρήστες/διαχειριστές των κέντρων αιμοδοσίας έχουμε τις παρακάτω λειτουργικές απαιτήσεις:
+				\begin{itemize}
+					\item Δημιουργία νέων γεγονότων αιμοδοσίας.
+					\item Αποστολή ειδοποιήσεων στους εθελοντές αιμοδότες βάση των γεγονότων αιμοδοσίας, των αναγκών και των κριτηρίων αποδοχής.
+					\item Προβολή στατιστικών ανά έτος σχετικά με τις ειδοποιήσεις που στάλθηκαν από το συγκεκριμένο κέντρο αιμοδοσίας και την ανταπόκριση των χρηστών (αποδοχή, απόρριψη, άνοιγμα ειδοποίησης, ολοκλήρωση αιμοδοσίας).
+					\item Διαχείριση των ραντεβού για αιμοληψία.
+					\item Διαχείριση του προφίλ του κέντρου αιμοδοσίας.
+				%	\item Εισαγωγή δεδομένων από το τοπικό τους σύστημα στο κεντρικό σύστημα μας που βρίσκεται στο υπολογιστικό νέφος
+					\item Δυνατότητα εγγραφής στο σύστημα νέου εθελοντή αιμοδότη.
+					\item Δυνατότητα καταχώρησης της ολοκλήρωσης της αιμοδοσίας.
+					\item Δυνατότητα ελέγχου τήρησης προϋποθέσεων καταλληλότητας εθελοντή αιμοδότη.
+				\end{itemize}
+				Όσον αφορά στους υπέρ-διαχειριστές του συστήματος έχουμε τις παρακάτω λειτουργικές απαιτήσεις:
+				\begin{itemize}
+					\item Δυνατότητα διαχείρισης λογαριασμών χρηστών.σσ
+					\item Προβολή στατιστικών για τους χρήστες του συστήματος
+				\end{itemize}
+
 	\subsection{Social Networking Integration}
 	\subsection{Gamification}
 		Το gamification (παιχνιδοποιήση) ορίζεται ως "η ενσωμάτωση διάφορων πρακτικών και διαδικασιών παιχνιδιού σε καταστάσεις που δεν σχετίζονται με το παιχνίδι με στόχο τη λύση προβλημάτων μέσω της αύξησης της διαδραστικότητας και της συμμετοχής των χρηστών"\cite{Deterding:2011:GDE:2181037.2181040}\cite{Rojas:2013:MPG:2583008.2583033}. Ως εκ τούτου, η το gamification έχει βρει χρήση σε ένα ευρύ φάσμα εφαρμογών από τον χώρο του marketing και της εκπαίδευσης μέχρι και τον χώρο της υγείας \cite{6758978}. Το Gartner έχει εκτιμήσει ότι μέχρι το τέλος του 2015 περισσότερο από το 50\% των επιχειρήσεων θα αξιοποιεί το gamification \cite{gartnerGamification}. Στον ακαδημαϊκό χώρο συναντάμε όλο και περισσότερη έρευνα και δημοσιεύσεις με στόχο να μελετηθεί με μετρήσιμα, αντικειμενικά κριτήρια κατά πόσο είναι αποτελεσματική η χρήση των τεχνικών gamifaction. Ένα παιχνίδι αποτελείται από έξι δομικά στοιχεία, όπως παρουσιάζονται στο σχήμα \ref{fig:gamification_components}.
